Refactor OSU components to java components